# ghidra_scripts

./: .gitignore  CalcCyclomaticForAllFunctions.py  FindFrequentlyUsedFunctions.py  README.md  SearchFunctionCallPattern.py  SearchFunctionReferences.py  SearchVulnSscanf.py  TestSymbolicPropagator.py  pyproject.toml
ghidra9.2.1_pyi/: ghidra_builtins.pyi
ghidra9.2.1_pyi/ghidra/: GhidraApplicationLayout.pyi  GhidraClassLoader.pyi  GhidraException.pyi  GhidraJarApplicationLayout.pyi  GhidraLaunchable.pyi  GhidraLauncher.pyi  GhidraOptions.pyi  GhidraRun.pyi  GhidraTestApplicationLayout.pyi  GhidraThreadGroup.pyi  JarRun.pyi  MiscellaneousPluginPackage.pyi  ProjectInitializer.pyi  SoftwareModelingInitializer.pyi  StatusReportingTaskMonitor.pyi  SwingExceptionHandler.pyi  __init__.pyi
ghidra9.2.1_pyi/ghidra/app/: CorePluginPackage.pyi  DeveloperPluginPackage.pyi  ExamplesPluginPackage.pyi  GraphPluginPackage.pyi  __init__.pyi
ghidra9.2.1_pyi/ghidra/base/: __init__.pyi
ghidra9.2.1_pyi/ghidra/bitpatterns/: __init__.pyi
ghidra9.2.1_pyi/ghidra/bytepatterns/: __init__.pyi
ghidra9.2.1_pyi/ghidra/closedpatternmining/: ClosedSequenceMiner.pyi  FrequentSequence.pyi  FrequentSequenceItem.pyi  ProjectedDatabase.pyi  ProjectedSequenceInfo.pyi  Sequence.pyi  SequenceDatabase.pyi  SequenceItem.pyi  SequenceMiningParams.pyi  __init__.pyi
ghidra9.2.1_pyi/ghidra/dalvik/: __init__.pyi
ghidra9.2.1_pyi/ghidra/docking/: __init__.pyi
ghidra9.2.1_pyi/ghidra/feature/: __init__.pyi
ghidra9.2.1_pyi/ghidra/file/: __init__.pyi
utils/: __init__.py  console.py  decompiler.py
(+6377 files in other folders)
